# DiscordTranscript

./: .gitignore  C:\Users\xougu\Desktop\Transcript_Site\exemples\exemple_preview.html  README.md  debug_fr.html  generate_sample.py  pyproject.toml  reproduce_issue.py  setup.py  target.html  test.py  test_render.html  verify_changes.py
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml
DiscordTranscript/: __init__.py  chat_exporter.py  i18n.py
DiscordTranscript/construct/: attachment_handler.py  message.py  transcript.py
DiscordTranscript/construct/assets/: attachment.py  component.py  embed.py  reaction.py
DiscordTranscript/ext/: cache.py  discord_import.py  discord_utils.py  emoji_convert.py  html_generator.py
DiscordTranscript/html/: base.html
DiscordTranscript/html/attachment/: image.html
DiscordTranscript/html/component/: component_container.html  component_text_display.html
DiscordTranscript/parse/: markdown.py  mention.py
chat_exporter/construct/: attachment_handler.py  message.py  transcript.py
chat_exporter/ext/: discord_import.py
chat_exporter/html/: base.html
chat_exporter/parse/: markdown.py  mention.py
discord_channel_to_html_transcripts-0.0.3/: PKG-INFO
discord_channel_to_html_transcripts.egg-info/: PKG-INFO
src/discord_html_transcripts/: main.py
src/discord_html_transcripts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_chat_exporter.py  test_markdown.py  test_mention.py  test_transcript.py  test_transcripts.py
verification/: verify_changes.py
(+7 files in other folders)
